src/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub type Cronet_String = *const ::std::os::raw::c_char;
pub type Cronet_RawDataPtr = *mut ::std::os::raw::c_void;
pub type Cronet_ClientContext = *mut ::std::os::raw::c_void;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_Buffer {
    _unused: [u8; 0],
}
pub type Cronet_BufferPtr = *mut Cronet_Buffer;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_BufferCallback {
    _unused: [u8; 0],
}
pub type Cronet_BufferCallbackPtr = *mut Cronet_BufferCallback;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_Runnable {
    _unused: [u8; 0],
}
pub type Cronet_RunnablePtr = *mut Cronet_Runnable;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_Executor {
    _unused: [u8; 0],
}
pub type Cronet_ExecutorPtr = *mut Cronet_Executor;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_Engine {
    _unused: [u8; 0],
}
pub type Cronet_EnginePtr = *mut Cronet_Engine;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UrlRequestStatusListener {
    _unused: [u8; 0],
}
pub type Cronet_UrlRequestStatusListenerPtr = *mut Cronet_UrlRequestStatusListener;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UrlRequestCallback {
    _unused: [u8; 0],
}
pub type Cronet_UrlRequestCallbackPtr = *mut Cronet_UrlRequestCallback;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UploadDataSink {
    _unused: [u8; 0],
}
pub type Cronet_UploadDataSinkPtr = *mut Cronet_UploadDataSink;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UploadDataProvider {
    _unused: [u8; 0],
}
pub type Cronet_UploadDataProviderPtr = *mut Cronet_UploadDataProvider;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UrlRequest {
    _unused: [u8; 0],
}
pub type Cronet_UrlRequestPtr = *mut Cronet_UrlRequest;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_RequestFinishedInfoListener {
    _unused: [u8; 0],
}
pub type Cronet_RequestFinishedInfoListenerPtr = *mut Cronet_RequestFinishedInfoListener;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_Error {
    _unused: [u8; 0],
}
pub type Cronet_ErrorPtr = *mut Cronet_Error;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_QuicHint {
    _unused: [u8; 0],
}
pub type Cronet_QuicHintPtr = *mut Cronet_QuicHint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_PublicKeyPins {
    _unused: [u8; 0],
}
pub type Cronet_PublicKeyPinsPtr = *mut Cronet_PublicKeyPins;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_EngineParams {
    _unused: [u8; 0],
}
pub type Cronet_EngineParamsPtr = *mut Cronet_EngineParams;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_HttpHeader {
    _unused: [u8; 0],
}
pub type Cronet_HttpHeaderPtr = *mut Cronet_HttpHeader;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UrlResponseInfo {
    _unused: [u8; 0],
}
pub type Cronet_UrlResponseInfoPtr = *mut Cronet_UrlResponseInfo;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_UrlRequestParams {
    _unused: [u8; 0],
}
pub type Cronet_UrlRequestParamsPtr = *mut Cronet_UrlRequestParams;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_DateTime {
    _unused: [u8; 0],
}
pub type Cronet_DateTimePtr = *mut Cronet_DateTime;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_Metrics {
    _unused: [u8; 0],
}
pub type Cronet_MetricsPtr = *mut Cronet_Metrics;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_RequestFinishedInfo {
    _unused: [u8; 0],
}
pub type Cronet_RequestFinishedInfoPtr = *mut Cronet_RequestFinishedInfo;
#[repr(i32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_RESULT {
    Cronet_RESULT_SUCCESS = 0,
    Cronet_RESULT_ILLEGAL_ARGUMENT = -100,
    Cronet_RESULT_ILLEGAL_ARGUMENT_STORAGE_PATH_MUST_EXIST = -101,
    Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_PIN = -102,
    Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HOSTNAME = -103,
    Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_METHOD = -104,
    Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_HEADER = -105,
    Cronet_RESULT_ILLEGAL_STATE = -200,
    Cronet_RESULT_ILLEGAL_STATE_STORAGE_PATH_IN_USE = -201,
    Cronet_RESULT_ILLEGAL_STATE_CANNOT_SHUTDOWN_ENGINE_FROM_NETWORK_THREAD = -202,
    Cronet_RESULT_ILLEGAL_STATE_ENGINE_ALREADY_STARTED = -203,
    Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_STARTED = -204,
    Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_INITIALIZED = -205,
    Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_INITIALIZED = -206,
    Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_STARTED = -207,
    Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_REDIRECT = -208,
    Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_READ = -209,
    Cronet_RESULT_ILLEGAL_STATE_READ_FAILED = -210,
    Cronet_RESULT_NULL_POINTER = -300,
    Cronet_RESULT_NULL_POINTER_HOSTNAME = -301,
    Cronet_RESULT_NULL_POINTER_SHA256_PINS = -302,
    Cronet_RESULT_NULL_POINTER_EXPIRATION_DATE = -303,
    Cronet_RESULT_NULL_POINTER_ENGINE = -304,
    Cronet_RESULT_NULL_POINTER_URL = -305,
    Cronet_RESULT_NULL_POINTER_CALLBACK = -306,
    Cronet_RESULT_NULL_POINTER_EXECUTOR = -307,
    Cronet_RESULT_NULL_POINTER_METHOD = -308,
    Cronet_RESULT_NULL_POINTER_HEADER_NAME = -309,
    Cronet_RESULT_NULL_POINTER_HEADER_VALUE = -310,
    Cronet_RESULT_NULL_POINTER_PARAMS = -311,
    Cronet_RESULT_NULL_POINTER_REQUEST_FINISHED_INFO_LISTENER_EXECUTOR = -312,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_Error_ERROR_CODE {
    Cronet_Error_ERROR_CODE_ERROR_CALLBACK = 0,
    Cronet_Error_ERROR_CODE_ERROR_HOSTNAME_NOT_RESOLVED = 1,
    Cronet_Error_ERROR_CODE_ERROR_INTERNET_DISCONNECTED = 2,
    Cronet_Error_ERROR_CODE_ERROR_NETWORK_CHANGED = 3,
    Cronet_Error_ERROR_CODE_ERROR_TIMED_OUT = 4,
    Cronet_Error_ERROR_CODE_ERROR_CONNECTION_CLOSED = 5,
    Cronet_Error_ERROR_CODE_ERROR_CONNECTION_TIMED_OUT = 6,
    Cronet_Error_ERROR_CODE_ERROR_CONNECTION_REFUSED = 7,
    Cronet_Error_ERROR_CODE_ERROR_CONNECTION_RESET = 8,
    Cronet_Error_ERROR_CODE_ERROR_ADDRESS_UNREACHABLE = 9,
    Cronet_Error_ERROR_CODE_ERROR_QUIC_PROTOCOL_FAILED = 10,
    Cronet_Error_ERROR_CODE_ERROR_OTHER = 11,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_EngineParams_HTTP_CACHE_MODE {
    Cronet_EngineParams_HTTP_CACHE_MODE_DISABLED = 0,
    Cronet_EngineParams_HTTP_CACHE_MODE_IN_MEMORY = 1,
    Cronet_EngineParams_HTTP_CACHE_MODE_DISK_NO_HTTP = 2,
    Cronet_EngineParams_HTTP_CACHE_MODE_DISK = 3,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_UrlRequestParams_REQUEST_PRIORITY {
    Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_IDLE = 0,
    Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_LOWEST = 1,
    Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_LOW = 2,
    Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_MEDIUM = 3,
    Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_HIGHEST = 4,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_UrlRequestParams_IDEMPOTENCY {
    Cronet_UrlRequestParams_IDEMPOTENCY_DEFAULT_IDEMPOTENCY = 0,
    Cronet_UrlRequestParams_IDEMPOTENCY_IDEMPOTENT = 1,
    Cronet_UrlRequestParams_IDEMPOTENCY_NOT_IDEMPOTENT = 2,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_RequestFinishedInfo_FINISHED_REASON {
    Cronet_RequestFinishedInfo_FINISHED_REASON_SUCCEEDED = 0,
    Cronet_RequestFinishedInfo_FINISHED_REASON_FAILED = 1,
    Cronet_RequestFinishedInfo_FINISHED_REASON_CANCELED = 2,
}
#[repr(i32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Cronet_UrlRequestStatusListener_Status {
    Cronet_UrlRequestStatusListener_Status_INVALID = -1,
    Cronet_UrlRequestStatusListener_Status_IDLE = 0,
    Cronet_UrlRequestStatusListener_Status_WAITING_FOR_STALLED_SOCKET_POOL = 1,
    Cronet_UrlRequestStatusListener_Status_WAITING_FOR_AVAILABLE_SOCKET = 2,
    Cronet_UrlRequestStatusListener_Status_WAITING_FOR_DELEGATE = 3,
    Cronet_UrlRequestStatusListener_Status_WAITING_FOR_CACHE = 4,
    Cronet_UrlRequestStatusListener_Status_DOWNLOADING_PAC_FILE = 5,
    Cronet_UrlRequestStatusListener_Status_RESOLVING_PROXY_FOR_URL = 6,
    Cronet_UrlRequestStatusListener_Status_RESOLVING_HOST_IN_PAC_FILE = 7,
    Cronet_UrlRequestStatusListener_Status_ESTABLISHING_PROXY_TUNNEL = 8,
    Cronet_UrlRequestStatusListener_Status_RESOLVING_HOST = 9,
    Cronet_UrlRequestStatusListener_Status_CONNECTING = 10,
    Cronet_UrlRequestStatusListener_Status_SSL_HANDSHAKE = 11,
    Cronet_UrlRequestStatusListener_Status_SENDING_REQUEST = 12,
    Cronet_UrlRequestStatusListener_Status_WAITING_FOR_RESPONSE = 13,
    Cronet_UrlRequestStatusListener_Status_READING_RESPONSE = 14,
}
extern "C" {
    pub fn Cronet_Buffer_Create() -> Cronet_BufferPtr;
}
extern "C" {
    pub fn Cronet_Buffer_Destroy(self_: Cronet_BufferPtr);
}
extern "C" {
    pub fn Cronet_Buffer_SetClientContext(
        self_: Cronet_BufferPtr,
        client_context: Cronet_ClientContext,
    );
}
extern "C" {
    pub fn Cronet_Buffer_GetClientContext(self_: Cronet_BufferPtr) -> Cronet_ClientContext;
}
extern "C" {
    pub fn Cronet_Buffer_InitWithDataAndCallback(
        self_: Cronet_BufferPtr,
        data: Cronet_RawDataPtr,
        size: u64,
        callback: Cronet_BufferCallbackPtr,
    );
}
extern "C" {
    pub fn Cronet_Buffer_InitWithAlloc(self_: Cronet_BufferPtr, size: u64);
}
extern "C" {
    pub fn Cronet_Buffer_GetSize(self_: Cronet_BufferPtr) -> u64;
}
extern "C" {
    pub fn Cronet_Buffer_GetData(self_: Cronet_BufferPtr) -> Cronet_RawDataPtr;
}
pub type Cronet_Buffer_InitWithDataAndCallbackFunc = ::std::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_BufferPtr,
        data: Cronet_RawDataPtr,
        size: u64,
        callback: Cronet_BufferCallbackPtr,
    ),
>;
pub type Cronet_Buffer_InitWithAllocFunc =
    ::std::option::Option<unsafe extern "C" fn(self_: Cronet_BufferPtr, size: u64)>;
pub type Cronet_Buffer_GetSizeFunc =
    ::std::option::Option<unsafe extern "C" fn(self_: Cronet_BufferPtr) -> u64>;
pub type Cronet_Buffer_GetDataFunc =
    ::std::option::Option<unsafe extern "C" fn(self_: Cronet_BufferPtr) -> Cronet_RawDataPtr>;
extern "C" {
    pub fn Cronet_Buffer_CreateWith(
        InitWithDataAndCallbackFunc: Cronet_Buffer_InitWithDataAndCallbackFunc,
        InitWithAllocFunc: Cronet_Buffer_InitWithAllocFunc,
        GetSizeFunc: Cronet_Buffer_GetSizeFunc,
        GetDataFunc: Cronet_Buffer_GetDataFunc,
    ) -> Cronet_BufferPtr;
}
extern "C" {
    pub fn Cronet_BufferCallback_Destroy(self_: Cronet_BufferCallbackPtr);
}
extern "C" {
    pub fn Cronet_BufferCallback_SetClientContext(
        self_: Cronet_BufferCallbackPtr,
        client_context: Cronet_ClientContext,
    );
}
extern "C" {
    pub fn Cronet_BufferCallback_GetClientContext(
        self_: Cronet_BufferCallbackPtr,
    ) -> Cronet_ClientContext;
}
extern "C" {
    pub fn Cronet_BufferCallback_OnDestroy(
        self_: Cronet_BufferCallbackPtr,
        buffer: Cronet_BufferPtr,
    );
}
pub type Cronet_BufferCallback_OnDestroyFunc = ::std::option::Option<
    unsafe extern "C" fn(self_: Cronet_BufferCallbackPtr, buffer: Cronet_BufferPtr),
>;
extern "C" {
    pub fn Cronet_BufferCallback_CreateWith(
        OnDestroyFunc: Cronet_BufferCallback_OnDestroyFunc,
    ) -> Cronet_BufferCallbackPtr;
}
extern "C" {
    pub fn Cronet_Runnable_Destroy(self_: Cronet_RunnablePtr);
}
extern "C" {
    pub fn Cronet_Runnable_SetClientContext(
        self_: Cronet_RunnablePtr,
        client_context: Cronet_ClientContext,
    );
}
extern "C" {
    pub fn Cronet_Runnable_GetClientContext(self_: Cronet_RunnablePtr) -> Cronet_ClientContext;
}
extern "C" {
    pub fn Cronet_Runnable_Run(self_: Cronet_RunnablePtr);
}
